# QuickScript

./: .dockerignore  .gitignore  .gitpod.yml  .prettierignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LEARN.md  LICENSE  README.md  TODO.md  build.rs  build.sh  main  main.S  main.qs  main2.qs  out.txt  rust-toolchain.toml
.cargo/: _config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
crates/qsc-ast/: Cargo.toml
crates/qsc-ast/src/: ast.rs  block.rs  call.rs  compat.rs  cond.rs  error.rs  expr.rs  func.rs  lib.rs  literal.rs  macros.rs  op.rs  operation.rs  ret.rs  span.rs  token.rs  var.rs  vis.rs
crates/qsc-ast/src/ast/: mod.rs
crates/qsc-ast/src/ast/decl/: external.rs  func.rs  global.rs  mod.rs  var.rs
crates/qsc-ast/src/ast/expr/: binary.rs  mod.rs  operator.rs  unary.rs
crates/qsc-ast/src/ast/literal/: boolean.rs  char.rs  float.rs  int.rs  mod.rs  string.rs
crates/qsc-ast/src/ast/node/: block.rs  data.rs  mod.rs  sym.rs  ty.rs  vis.rs
crates/qsc-ast/src/ast/stmt/: call.rs  cond.rs  mod.rs  ret.rs
crates/qsc-ast/src/processed/: mod.rs
crates/qsc-cli/: Cargo.toml  build.rs
crates/qsc-cli/src/: compile.rs  completions.rs  lib.rs  main.rs  run.rs  style.rs  watch.rs
crates/qsc-codegen/: Cargo.toml
crates/qsc-codegen/src/: alias.rs  aot.rs  context.rs  error.rs  jit.rs  lib.rs  lookup.rs  simple.rs  unify.rs
crates/qsc-codegen/src/backend/: literal.rs  mod.rs  ops.rs  ret.rs
crates/qsc-codegen/src/backend/vars/: func.rs  var.rs
crates/qsc-codegen/src/generator/: call.rs  cond.rs  literal.rs  mod.rs  ops.rs  ret.rs  unify.rs
crates/qsc-codegen/src/generator/vars/: func.rs  global.rs  mod.rs  var.rs
crates/qsc-codegen/src/jit/: lookup.rs  mod.rs
crates/qsc-compiler/: Cargo.toml
crates/qsc-compiler/src/: error.rs  lib.rs
crates/qsc-core/: Cargo.toml
crates/qsc-core/src/: either.rs  lib.rs  macros.rs  strip.rs  target.rs  util.rs
crates/qsc-core/src/error/: backend.rs  codegen.rs  compiler.rs  lexer.rs  lexical.rs  mod.rs  processor.rs
crates/qsc-frontend/: Cargo.toml  README.md
crates/qsc-frontend/src/: frontend.rs  lib.rs
crates/qsc-jit/: Cargo.toml  README.md
crates/qsc-jit/src/: backend.rs  compiled_blob.rs  lib.rs  libs.rs
crates/qsc-lexer/: Cargo.toml
crates/qsc-lexer/src/: block.rs  call.rs  cond.rs  conv.rs  error.rs  func.rs  function.rs  lexer.rs  lib.rs  literal.rs  main.rs  op.rs  params.rs  parser.rs  quickscript.pest  ret.rs  test.rs  token.rs  ty.rs  type.rs  var.rs  vis.rs
crates/qsc-linker/: Cargo.toml  README.md
crates/qsc-linker/src/: android.rs  lib.rs  linux.rs  win.rs
crates/qsc-lsp/: Cargo.toml  build.rs
crates/qsc-lsp/src/: backend.rs  completion.rs  data.rs  hint.rs  lib.rs  main.rs  refs.rs  util.rs
crates/qsc-object/: Cargo.toml  README.md
crates/qsc-object/src/: backend.rs  lib.rs
crates/qsc-preprocessor/: Cargo.toml
crates/qsc-processor/: Cargo.toml
crates/qsc-processor/src/: block.rs  ctx.rs  decl.rs  error.rs  expr.rs  lib.rs  op.rs  stmt.rs  sym.rs  ty.rs
crates/qsc-tokenizer/: Cargo.toml
crates/qsc-tokenizer/src/: cursor.rs  data.rs  error.rs  operator.rs  token.rs
dev/: main.S  main.asm  main.c  main.pst.ron  main.qs  main_c
doc/: ARCHITECTURE.md
doc/types/: Array.md  String.md
jit/: Cargo.toml  README.md
jit/src/: backend.rs  compiled_blob.rs
jit/tests/: basic.rs
src/: alloc.rs  arch.rs  ast.rs  build.rs  compilable.rs  compile.rs  compiler.rs  cursor.rs  keyword.rs  lib.rs  linker.rs  macros.rs  main.rs  parser.rs  syntax.rs  target.rs  token.rs  util.rs
src/assembler/: aarch64.rs  arm.rs  mod.rs  x86.rs  x86_64.rs
src/ast/: args.rs  call.rs  expr.rs  func.rs  ifelse.rs  literal.rs  mod.rs  operation.rs  ret.rs  var.rs
src/base/: aarch64.S  mod.rs  x86_64.asm
src/base/code/: aarch64.S  mod.rs  x86_64.asm
src/base/code/aarch64/: exit.S  mod.rs  print.S
src/base/code/arm/: str_size.S
src/base/code/x86/: str_size.asm
src/base/code/x86_64/: exit.asm  mod.rs  print.asm
src/base/data/: mod.rs  x86_64.asm
src/cmd/: compile.rs  completions.rs  mod.rs  run.rs  watch.rs
src/codegen/: aot.rs  backend.rs  compile.rs  context.rs  data.rs  func.rs  function.rs  gen.rs  jit.rs  mod.rs  simple.rs  unify.rs
src/codegen/backend/: call.rs  literal.rs  mod.rs  ops.rs  ret.rs  unify.rs
src/codegen/backend/vars/: func.rs  mod.rs  var.rs
src/functions/: function.rs  mod.rs  print.rs
src/lexer/: cursor.rs  mod.rs
src/linker/: aarch64.rs  arm.rs  mod.rs  x86.rs  x86_64.rs
src/tokenizer/: consumer.rs  cursor.rs  data.rs  error.rs  mod.rs  operator.rs  punct.rs  token.rs
src/tokenizer/token/: mod.rs  operator.rs  string.rs  ttype.rs
src/tooling/: aarch64.rs  arm.rs  mod.rs  x86.rs  x86_64.rs
src/translator/: func.rs
src/types/: clif.rs  mod.rs
