[package]
name = "qsc-ast"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
qsc-core = { workspace = true }
qsc-tokenizer = { workspace = true }
