[package]
name = "qsc-ast"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
miette.workspace = true
pest.workspace = true
pest_derive.workspace = true
strum.workspace = true
thiserror.workspace = true
qsc-core.workspace = true
