[package]
name = "qsc-cli"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
miette.workspace = true
clap.workspace = true
log.workspace = true
clap-verbosity-flag.workspace = true
clap_complete.workspace = true
pretty_env_logger.workspace = true
target-lexicon.workspace = true
qsc-core.workspace = true
qsc-codegen.workspace = true
qsc-compiler.workspace = true
qsc-lexer.workspace = true
qsc-linker.workspace = true
const_format.workspace = true
notify.workspace = true
tempfile.workspace = true

[[bin]]
name = "qsc"
path = "src/main.rs"
