[package]
name = "qsc-codegen"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
miette.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-object.workspace = true
log.workspace = true
object.workspace = true
target-lexicon.workspace = true
qsc-ast.workspace = true
qsc-core.workspace = true
parking_lot.workspace = true
debug-ignore.workspace = true
