[package]
name = "qsc-frontend"
version.workspace = true
repository.workspace = true
authors = ["The Cranelift Project Developers"]
description = "Cranelift IR builder helper"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["no-std"]
readme = "README.md"
edition.workspace = true

[features]
default = ["std"]
std = ["cranelift-codegen/std"]
core = ["hashbrown", "cranelift-codegen/core"]

[dependencies]
cranelift-codegen.workspace = true
target-lexicon.workspace = true
log.workspace = true
hashbrown = { workspace = true, optional = true }
smallvec.workspace = true

[dev-dependencies]
similar.workspace = true
