[package]
name = "qsc-jit"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-codegen = { workspace = true, features = ["std"] }
cranelift-entity.workspace = true
cranelift-control.workspace = true
anyhow.workspace = true
region = "2.2.0"
libc.workspace = true
target-lexicon.workspace = true
memmap2 = { version = "0.2.1", optional = true }
log.workspace = true
wasmtime-jit-icache-coherence.workspace = true
