[package]
name = "qsc-jit"
version.workspace = true
repository.workspace = true
authors = ["The Cranelift Project Developers", "QuickScript Contributors"]
description = "A JIT library backed by Cranelift"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition.workspace = true

[features]
selinux-fix = ['memmap2']
default = []

[dependencies]
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-codegen = { workspace = true, features = ["std"] }
cranelift-entity.workspace = true
cranelift-control.workspace = true
anyhow.workspace = true
region.workspace = true
libc.workspace = true
target-lexicon.workspace = true
memmap2 = { workspace = true, optional = true }
log.workspace = true
wasmtime-jit-icache-coherence.workspace = true
pkg-config.workspace = true
regex.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
