[package]
name = "qsc-lexer"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
pest.workspace = true
pest_derive.workspace = true
qsc-ast.workspace = true
qsc-core.workspace = true
miette.workspace = true
thiserror.workspace = true
chumsky.workspace = true
itertools.workspace = true
ariadne.workspace = true
ron.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
