[package]
name = "qsc-lexer"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
pest.workspace = true
pest_derive.workspace = true
qsc-ast.workspace = true
qsc-core.workspace = true
miette.workspace = true
thiserror.workspace = true
