[package]
name = "qsc-linker"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
miette.workspace = true
target-lexicon.workspace = true
which.workspace = true
qsc-core.workspace = true
log.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
lnk.workspace = true
