[package]
name = "qsc-object"
version.workspace = true
repository.workspace = true
authors = ["The Cranelift Project Developers", "QuickScript Contributors"]
description = "Emit Cranelift output to native object files with `object`"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition.workspace = true

[dependencies]
cranelift-module.workspace = true
cranelift-codegen = { workspace = true, features = ["std"] }
cranelift-control.workspace = true
object = { workspace = true, features = ["write"] }
target-lexicon.workspace = true
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
cranelift-frontend.workspace = true
cranelift-entity.workspace = true
