[package]
name = "qsc-processor"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
qsc-ast.workspace = true
qsc-core.workspace = true
miette.workspace = true
thiserror.workspace = true
pest.workspace = true
